fix: wallet-connect invisible links on the dark-theme
Closes: ZKF-1210

--- a/src/assets/style/blocks/_socialBlock.scss
+++ b/src/assets/style/blocks/_socialBlock.scss
@@ -12,6 +12,7 @@
     width: 20px;
     height: 20px;
     color: $violet;
+    font-weight: 300;
     text-decoration: none;
     transition: color $transition1;
 
